--- a/app/views/offers/get.html.haml
+++ b/app/views/offers/get.html.haml
@@ -1,14 +1,14 @@
 
 %H3 Ask for new offers
 
-= form_tag "/offers", :method => "get" do
+= form_tag "/offers/submit", :method => "get" do
   = label_tag :uid, "User ID:"
   = text_field_tag :uid, "player1"
   %br
   = label_tag :pub0, "Customer parameters:"
-  = text_field_tag :pub0
+  = text_field_tag :pub0, "campaign0"
   %br
   = label_tag :page, "Page:"
-  = text_field_tag :page
+  = text_field_tag :page, "1"
   %br
   = submit_tag "Submit"
