--- a/app/views/offers/list.html.haml
+++ b/app/views/offers/list.html.haml
@@ -1,8 +1,11 @@
 %h2 Fresh offers
-%br
 = link_to "Get even fresher offers", :controller => "offers", :action => "get"
 %br
 %br
+= "Verification result: #{@verified}"
+%br
+%br
+
 - if @offers.empty?
   .no_offers
     No offers
