--- a/app/views/offers/list.html.haml
+++ b/app/views/offers/list.html.haml
@@ -1,8 +1,6 @@
 %h2 Fresh offers
-= link_to "Get even fresher offers", :controller => "offers", :action => "get"
-%br
-%br
-= "Verification result: #{@verified}"
+= "Verification result: #{@verified}, "
+= link_to "get even fresher offers", :controller => "offers", :action => "get"
 %br
 %br
 
